selenium-hub-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: selenium-standalone-deployment
  labels:
    app: selenium-standalone
    name: selenium-standalone
spec:
  replicas: 1
  selector:
    matchLabels:
      app: selenium-standalone
  template:
    metadata:
      labels:
        app: selenium-standalone
    spec:
      containers:
        - name: selenium-standalone-firefox
          image: selenium/standalone-firefox:4.3.0-20220726
          ports:
            - containerPort: 4444
              protocol: TCP
            - containerPort: 7900
              protocol: TCP
