wordle-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordle-deployment
  labels:
    app: wordle
    name: wordle
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordle
  template:
    metadata:
      labels:
        app: wordle
    spec:
      containers:
        - name: wordlebot
          image: benpayne/wordlebot:latest
          ports:
            - containerPort: 80
              protocol: TCP
