selenium-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: selenium-service
  labels:
    name: selenium-service
spec:
  type: NodePort
  selector:
    app: selenium-standalone
  ports:
    - name: web
      protocol: TCP
      port: 4444
      targetPort: 4444
    - name: ctl
      protocol: TCP
      port: 7900
      targetPort: 7900
