wordle-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordle-service
  labels:
    name: wordle-service
spec:
  type: NodePort
  selector:
    app: wordle
  ports:
    - name: wordle-web
      protocol: TCP
      port: 8000
      targetPort: 8000
